--- a/public/css/explorestyle.css
+++ b/public/css/explorestyle.css
@@ -504,6 +504,9 @@ a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
   .goog-te-gadget-simple .goog-te-menu-value span {
     font-size: 12px !important;
   }
+  .btn-download{
+        text-align: center;
+  }
 }
 @media (max-width: 991px) {
 /*  .page{
@@ -626,7 +629,6 @@ a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
 /*  position: relative;*/
   width: 33.333333%;
   height: 60%;
-  margin-top: 18px;
   z-index: 1;
   box-shadow: 0 1px 6px rgba(57,73,76,.35);
 }
