--- a/public/css/explorestyle.css
+++ b/public/css/explorestyle.css
@@ -765,7 +765,7 @@ a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
 
 .browse_category .card { margin-bottom: 20px;}
 .browse_category .card-header {background: #f0f0f0;padding: 0px;}
-.browse_category .card-link { background:#3f51b5; padding: 15px;display: inline-block;padding-left: 40px;font-weight: 400;font-size: 14px;color: #fff;float: left;width: 10%;padding: 15.5px 16px;}
+.browse_category .card-link { background:#3f51b5; padding: 15px;display: inline-block;padding-left: 40px;font-weight: 400;font-size: 14px;color: #fff !important;float: left;width: 10%;padding: 15.5px 16px;}
 .browse_category .card .card-link:before{
   position: relative;
   top: 0px;
@@ -809,7 +809,7 @@ a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
 .footer-content p{ margin: 0px;}
 .footer-content p a { color: #fff;}
 .card-block { background: #f5f5f5;box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.3);}
-.card-block span {font-size: 16px;font-weight: 300;white-space:normal;line-height: 26px;display: inline-flex;}
+.card-block span {font-size: 16px;font-weight: 300;white-space:normal;line-height: 26px;}
 .card-block span.organize_font {font-size: 14px;font-weight: 400;}
 .card-block .panel-link { font-size:16px;}
 .card-block h4 { font-size: 14px;font-weight: 300;}
@@ -838,6 +838,8 @@ a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
 .category_badge .panel-link:nth-child(12) { color: #fff;background-color: #dc3545;}
 .category_badge .panel-link:nth-child(13) { color: #fff;background-color: #343a40;}
 .category_badge .panel-link:nth-child(14) { color: #fff;background-color: #3949ab;}
+.category_badge .panel-link:nth-child(15) { color: #fff;background-color: #007bff;}
+.category_badge .panel-link:nth-child(16) { color: #fff;background-color: #28a745;}
 .page-register .home_serach_form .form-control{font-size: 1.286rem; color: #fff;}
 .card-columns {-webkit-column-count: 2;column-count: 2;}
 .property .card-block span { font-size:14px;}
