--- a/public/css/explorestyle.css
+++ b/public/css/explorestyle.css
@@ -802,7 +802,7 @@ a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
 .browse_category .card .card-link + .card-link {margin: 0px; padding: 15.5px 0;color: #fff;cursor: pointer; position: absolute; width: auto; left: 10%;}
 .browse_category .card .card-link + .card-link:before {display: none;}
 .browse_category .card .card-link.collapsed + .card-link {background:#f0f0f0;color: #555555;}
-.after_serach { background-image: url(../frontend/assets/examples/images/search_bg.jpg);    background-size: cover;padding: 60px 0px;}
+.after_serach { background-size: cover;padding: 60px 0px;}
 .inner_search {background: rgba(255, 255, 255, 0.65);padding: 35px 30px;}
 .inner_search img{ max-width: 100%;}
 .inner_search ul li {color: #000; line-height:30px ;font-size: 16px;}
