--- a/public/css/explorestyle.css
+++ b/public/css/explorestyle.css
@@ -778,21 +778,32 @@ a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
   -o-transition: all .3s linear 0s;
   transition: all .3s linear 0s;
   content: '';
-  color: #fff;    right: auto;
-  display: inline;
+  color: #fff;    
+  right: auto;  
+  display: inline-block;
+  text-align: center;
+  width: 22px;
+  height: 22px;
+  border: solid 1px #fff;
+  border-radius: 50%;
+  background-color: orchid;
   
 }
 .browse_category .card .card-link.collapsed:before { content: '';
   position: relative;
   top: 0px;
-  left: 0px;right: auto;color: #3f51b5;
+  left: 0px;
+  right: auto;
+  /*color: #3f51b5;*/
   font-family: "Material Design Iconic";
   -webkit-transition: all .3s linear 0s;
   -o-transition: all .3s linear 0s;
-  transition: all .3s linear 0s;-webkit-transform: rotate(-180deg);
+  transition: all .3s linear 0s;
+  -webkit-transform: rotate(-180deg);
   -ms-transform: rotate(-180deg);
   -o-transform: rotate(-180deg);
-  transform: rotate(-180deg);}
+  transform: rotate(-180deg);
+}
 .browse_category .card-link.collapsed { background:#f0f0f0;color: #555555;}
 .browse_category .card-body {padding:20px;background: #f0f0f0;
   font-weight: 400;
