--- a/public/css/explorestyle.css
+++ b/public/css/explorestyle.css
@@ -53,8 +53,8 @@ body{
   touch-action: none;
 }
 #sidebar {
-    min-width: 270px;
-    max-width: 270px;
+    min-width: 450px;
+    max-width: 450px;
     background: #f3f3f3;
     color: #424242;
     z-index: 2;
@@ -64,7 +64,7 @@ body{
 }
 
 #sidebar.active {
-    margin-left: -270px;
+    margin-left: -450px;
 }
 
 #sidebar .sidebar-header {
@@ -246,7 +246,9 @@ li.status-side:hover {
 ----------------------------------------------------- */
 @media (max-width: 768px) {
     #sidebar {
-        margin-left: -270px;
+        margin-left: -100vw;
+        min-width: 100vw;
+        max-width: 100vw;
     }
     #sidebar.active {
         margin-left: 0;
