--- a/public/css/explorestyle.css
+++ b/public/css/explorestyle.css
@@ -60,15 +60,8 @@ body{
     z-index: 2;
     transition: all 0.3s;
     box-shadow: 0 1px 6px rgba(57,73,76,.35);
+    overflow: auto;
 
-}
-
-@media (max-width: 768px) {
-    #sidebar {
-        margin-left: -100vw;
-        min-width: 100vw;
-        max-width: 100vw;
-    }
 }
 
 #sidebar.active {
@@ -254,7 +247,9 @@ li.status-side:hover {
 ----------------------------------------------------- */
 @media (max-width: 768px) {
     #sidebar {
-        margin-left: -270px;
+        margin-left: -100vw;
+        min-width: 100vw;
+        max-width: 100vw;
     }
     #sidebar.active {
         margin-left: 0;
